assets/css/style.css
* {
  padding: 0px;
  margin: 0px;
}

::-moz-selection { background: aliceblue; }
::selection { background: aliceblue; }

body, html {
  display: flex;
  align-items: center;
  justify-content: center;
  height: 100%;
  min-height: 100%;
}

.wrapper{
  display: flex;
  flex-direction: column;
  align-items: center;
  justify-content: center;
  width: 50%;
}

.top-heading {
  font-family: Poppins, serif;
  font-size: 3em;
  padding: 15px 0px 15px 0px;
}

p {
  font-family: Roboto, serif;
  text-align: center;
  font-size: 1.3em;
}

.link {
  text-decoration: none;
  color: inherit;
  text-decoration: underline;
}

.social-section {
  width: 80%; /* 80% of .wrapper */
  display: flex;
  justify-content: center;
  margin-top: 40px;
  margin-bottom: 40px;
}

.social-icon {
  margin-right: 7%;
  margin-left: 7%;
}

#update {
  position: fixed;
  bottom: 10px;
  text-align: center;
  font-size: .8em;
  font-family: Roboto, serif;
}

/* Media Queries: */

@media only screen and (max-width: 794px) {
  .wrapper { 
    margin: 40px;
    width: 100%;
  }
  .top-heading {
    font-size: 2.5em;
  }

  p {
    font-size: 1.1em;
  }
}

@media only screen and (max-width: 480px) {
  .wrapper { 
    margin: 40px;
    width: 100%;
  }
  .top-heading {
    font-size: 2em;
  }

  p {
    font-size: 1.1em;
  }
}

@media only screen and (max-width: 412px) {
   .top-heading {
    font-size: 1.7em;
  }

  p {
    font-size: 1.1em;
  }
}

@media only screen and (max-width: 320px) {
   .top-heading {
    font-size: 1.3em;
  }

  p {
    font-size: 1.1em;
  }
}

